/* eslint-disable no-template-curly-in-string */
import outdent from 'outdent';
import {typescriptEslintParser} from '../scripts/parsers.js';
import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);

const typeAware = code => ({
	code,
	filename: 'file.ts',
	languageOptions: {
		parser: typescriptEslintParser,
		parserOptions: {projectService: {allowDefaultProject: ['*.ts']}},
	},
});

test.snapshot({
	valid: [
		'object["key"]',
		'object[`key`]',
		'object[`feature:${from}`]',
		'object[`feature:${from}:${to}`]',
		'object[`${{}}`]',
		'object[`${[]}`]',
		'object[`${4n}`]',
		'object[`${9007199254740992}`]',
		'object[tag`feature:${from}`]',
		'object[String.raw`feature:${from}`]',
		'object[(`feature:${from}`)]',
		'object[(foo(), `feature:${from}`)]',
		'object[condition ? `feature:${from}` : `feature:${to}`]',
		'object?.[`feature:${from}`]',
		'object[`feature:${from}`] = value',
		'delete object[`feature:${from}`]',
		'object[`feature:${from}`]()',
		'object[key]',
		'object[getKey()]',
		'object[Symbol.iterator]',
		'object[1]',
		'object[0.5]',
		'object[-0.5]',
		'array[4]',
		'object[true]',
		'object[undefined]',
		'object[null]',
		'object[String(key)]',
		'object[array.join("")]',
		'array[Number(4n)]',
		'object[bigint.toString()]',
		'const key = "key"; object[key]',
		'const key = `feature:${from}`; object[key]',
		'const key = `feature:${from}`; const alias = key; object[alias]',
		'const key = Symbol("key"); object[key]',
		'const key = 1; object[key]',
		'const key = 1.25; object[key]',
		'const key = true; object[key]',
		'const NaN = "key"; object[NaN]',
		'const Array = "key"; object[Array]',
		'const Math = "key"; object[Math]',
		'const TypeError = "key"; object[TypeError]',
		'const globalThis = {Array: "key"}; object[globalThis.Array]',
		'function foo(Date) { object[Date] }',
		'function foo(Infinity) { object[Infinity] }',
		'function foo(parseInt) { object[parseInt] }',
		`const object = {value: 4n};
Object.defineProperty(object, 'value', {get() { return 'key'; }});
object[object.value];`,
		'let key = {}; object[key]',
		'var key = []; object[key]',
		'const object = {[symbol]: value}',
		'const object = {["key"]: value}',
		'const object = {[`feature:${from}`]: value}',
		'const {[`feature:${from}`]: value} = object',
		'const {[key]: value} = object',
		'class A {[symbol]() {}}',
		'class A {["key"]() {}}',
		'class A {[`feature:${from}`]() {}}',
		'class A {[`feature:${from}`] = value}',
		// One branch is unknown
		'object[condition ? key : "key"]',
	],
	invalid: [
		'object[{}]',
		'const key = Object.freeze({}); object[key]',
		'object[[]]',
		'object[Array()]',
		'object[Array.from(iterable)]',
		'object[Array]',
		'object[4n]',
		'object[NaN]',
		'object[Infinity]',
		'object[-Infinity]',
		'object[9007199254740992]',
		'object[-9007199254740992]',
		'object[Date]',
		'object[globalThis]',
		'object[Math]',
		'object[parseInt]',
		'object[Symbol]',
		'object[TypeError]',
		'object[globalThis.Array]',
		'object[globalThis["Math"]]',
		'object[new URL(url)]',
		'object[() => {}]',
		'object[function () {}]',
		'object[class {}]',
		'object?.[{}]',
		// Sequence expression evaluating to an object key
		'object[(0, {})]',
		'const key = (0, {}); object[key]',
		'object[{}] = value',
		'delete object[{}]',
		'object[{}]()',
		'const key = {}; object[key]',
		'const key = []; object[key]',
		'const key = Array.from(iterable); object[key]',
		'const key = Date; object[key]',
		'const key = Math; object[key]',
		'const key = parseInt; object[key]',
		'const key = TypeError; object[key]',
		'const key = globalThis.TypeError; object[key]',
		'const key = 4n; object[key]',
		'const key = Number.NaN; object[key]',
		'const key = Number.POSITIVE_INFINITY; object[key]',
		'const key = Number.NEGATIVE_INFINITY; object[key]',
		'const key = 9007199254740992; object[key]',
		'const key = new URL(url); object[key]',
		'const key = () => {}; object[key]',
		'function key() {} object[key]',
		'const key = class {}; object[key]',
		'class Key {} object[Key]',
		'const key = {}; const alias = key; object[alias]',
		'object[condition ? `feature:${from}` : {}]',
		'object[condition ? {} : "key"]',
		'const key = {}; ({[key]: value})',
		'const key = []; class A {[key]() {}}',
		'const object = {[{}]: value}',
		'const object = {[[]]: value}',
		'const object = {[4n]: value}',
		'const object = {[9007199254740992]: value}',
		'const object = {[{}]() {}}',
		'const {[{}]: value} = object',
		'class A {[{}]() {}}',
		'class A {[[]] = value}',
		'class A {[4n]() {}}',
		'class A {[9007199254740992]() {}}',
		'const object = {4n: value}',
		'const object = {9007199254740992: value}',
		'class A {4n() {}}',
		'class A {9007199254740992() {}}',
		outdent`
			const key = {};
			object[key];
		`,
		// A function is turned into its source text
		'object[Object.keys]',
		'const key = Object.keys; object[key]',
	],
});

test.snapshot({
	testerOptions: {
		languageOptions: {
			parser: parsers.typescript,
		},
	},
	valid: [
		'object[stringKey as string]',
		'object[numberKey as number]',
		'object[symbolKey as symbol]',
		'object[unknownKey as unknown]',
		'const key: {} = "key"; object[key]',
		'interface Key {} const key: Key = "key"; object[key]',
		'const key: number = 1; object[key]',
		'const key: 0.5 = 0.5; object[key]',
		'const key: -0.5 = -0.5; object[key]',
		'const key: boolean = true; object[key]',
		'declare const key: `feature:${string}`; object[key]',
		'declare const key: `feature:${number | boolean}`; object[key]',
		'type Key = `feature:${string}`; declare const key: Key; object[key]',
		'declare const key: `feature:${string}` | string; object[key]',
		'const key: string[] | string = "key"; object[key]',
		'type Key = string; declare const key: Key; { type Key = {id: string}; object[key] }',
		'type Foo = string; type Key = Foo; { type Foo = {id: string}; declare const key: Key; object[key] }',
		'object[("key" as string[] | string)]',
		'object[("key" as object)]',
		'object[(1 as object)]',
		'object[(`feature:${from}` as string)]',
		'object[(`feature:${from}` as const)]',
		'enum Key {A} object[Key.A]',
		'enum Key {A} object[Key["A"]]',
		'declare const key: keyof Foo; object[key]',
		'declare const key: {id: string} & string; object[key]',
		'declare const key: Foo.Bar; object[key]',
		'interface Key extends Foo.Bar {} declare const key: Key; object[key]',
		'interface Key extends Foo {} declare const key: Key; object[key]',
	],
	invalid: [
		'object[({} as Foo)]',
		'object[<Foo>{}]',
		'object[([] satisfies Foo)]',
		'object[(key as string[] | string)]',
		'object[(4n as const)]',
		'object[(9007199254740992 as const)]',
		'object[({})!]',
		'const key: bigint = 4n; object[key]',
		'const key: object = {}; object[key]',
		'declare const key: {id: string}; object[key]',
		'interface Key {id: string} declare const key: Key; object[key]',
		'type Key = {id: string}; declare const key: Key; object[key]',
		'type Key = {id: string}; declare const key: Key; { type Key = string; object[key] }',
		'type Foo = {id: string}; type Key = Foo; { type Foo = string; declare const key: Key; object[key] }',
		'class Key {} declare const key: Key; object[key]',
		'class Key {} let key: Key; object[key]',
		'class Key {} function foo(key: Key) { object[key] }',
		'const key: string[] = []; object[key]',
		'declare const key: string[] | string; object[key]',
		'declare const key: bigint | string; object[key]',
		'declare const key: (() => void) | string; object[key]',
		'declare const key: Array<string> | string; object[key]',
		'const key: Array<string> = []; object[key]',
		'const key: ReadonlyArray<string> = []; object[key]',
		'const key: readonly string[] = []; object[key]',
		'const key: [string] = ["key"]; object[key]',
		'const key: readonly [string] = ["key"]; object[key]',
		'type Key = string[]; const key: Key = []; object[key]',
		'const key: () => void = () => {}; object[key]',
		'const key: abstract new () => object = Foo; object[key]',
		'const key: 9007199254740992 = 9007199254740992; object[key]',
		'declare const key: -9007199254740992; object[key]',
		'const key: number = 9007199254740992; object[key]',
		'object[(9007199254740992 as number)]',
		'const key: {} = {}; object[key]',
		'interface Key {} const key: Key = {}; object[key]',
		'class Key {} const key: Key = new Key(); object[key]',
		'const key = {} as Foo; object[key]',
		'const key = [] satisfies Foo; object[key]',
		'enum Key {A} object[Key]',
		'declare const key: `feature:${string}` | {id: string}; object[key]',
		'abstract class A { abstract [{}]: string }',
		'abstract class A { abstract [{}](): void }',
		'abstract class A { abstract accessor [{}]: string }',
		'abstract class A { abstract 4n(): void }',
		'declare const key: readonly string[]; object[key]',
		'declare const key: {id: string} & {name: string}; object[key]',
	],
});

test.snapshot({
	valid: [
		typeAware('const key: {} = "key"; object[key]'),
		typeAware('interface Key {} const key: Key = "key"; object[key]'),
		typeAware('type Key = string & {brand: true}; declare const key: Key; object[key]'),
		typeAware('declare const key: `feature:${string}`; object[key]'),
		typeAware('declare const key: `feature:${number | boolean}`; object[key]'),
		typeAware('type Key = `feature:${string}`; declare const key: Key; object[key]'),
		typeAware('declare const key: `feature:${string}` | string; object[key]'),
		typeAware('declare const key: `feature:${string}` & {brand: true}; object[key]'),
		typeAware('declare const key: Lowercase<string>; object[key]'),
		typeAware('declare const key: Uppercase<string>; object[key]'),
		typeAware('declare const key: Capitalize<string>; object[key]'),
		typeAware('declare const key: Uncapitalize<string>; object[key]'),
		typeAware('declare const key: Lowercase<string> | string; object[key]'),
		typeAware('declare const key: Lowercase<\'FOO\'>; object[key]'),
		typeAware('declare const key: Uppercase<Lowercase<string>>; object[key]'),
		typeAware('declare const key: Lowercase<string> & {brand: true}; object[key]'),
		typeAware('declare const key: Uppercase<string>; class A {[key]() {}}'),
		typeAware('declare function tag(strings: TemplateStringsArray): string; object[tag`feature:${string}`]'),
		typeAware('declare function tag(strings: TemplateStringsArray): string; const key = tag`feature:${string}`; object[key]'),
		typeAware('const key: Number = 1; object[key]'),
		typeAware('const uniqueSymbol = Symbol(); object[uniqueSymbol]'),
		typeAware('const uniqueSymbol = Symbol(); const o = {[uniqueSymbol]: true}'),
		typeAware('declare const key: unique symbol; object[key]'),
		typeAware('declare const key: unique symbol | string; object[key]'),
		typeAware('const key = Symbol(); const alias = key; object[alias]'),
		// Well-known symbols are `unique symbol` typed and declared in the default library.
		typeAware('declare const key: typeof Symbol.iterator; object[key]'),
		typeAware('const key = Symbol.iterator; object[key]'),
		typeAware('class A {static readonly key: unique symbol;} object[A.key]'),
		typeAware('function f<T extends symbol>(key: T) {object[key]}'),
		typeAware('declare const key: PropertyKey; object[key]'),
		typeAware(outdent`
			type Value = object | 'test';
			const data = {test: 123} as const;

			export function example(input: Value) {
				if (typeof input === 'string') {
					return data[input];
				}

				return data.test;
			}
		`),
		typeAware(outdent`
			type Value = object | string;

			function example(input: Value) {
				if (typeof input === 'string') {
					return object[input];
				}
			}
		`),
		typeAware(outdent`
			function example<Type extends object | string>(input: Type) {
				if (typeof input === 'string') {
					return object[input];
				}
			}
		`),
		typeAware(outdent`
			type Value = object | string;

			function example(input: Value) {
				if (typeof input === 'string') {
					return {[input]: value};
				}
			}
		`),
		typeAware(outdent`
			type Value = object | symbol;

			function example(input: Value) {
				if (typeof input === 'symbol') {
					return object[input];
				}
			}
		`),
		typeAware('declare function getKey(): Uppercase<string>; object[getKey()]'),
		typeAware('declare const key: any; object[key]'),
		typeAware('function f<T>(key: T) {object[key]}'),
	],
	invalid: [
		typeAware('declare const key: unique symbol | {id: string}; object[key]'),
		typeAware('declare const key: unique symbol | object; object[key]'),
		typeAware('function f<T extends object>(key: T) {object[key]}'),
		typeAware(outdent`
			type Value = object | 'test';

			export function example(input: Value) {
				if (typeof input === 'object') {
					return object[input];
				}
			}
		`),
		typeAware(outdent`
			type Value = object | string;

			function example(input: Value) {
				if (typeof input === 'object') {
					return {[input]: value};
				}
			}
		`),
		typeAware(outdent`
			type Value = object | 9007199254740992;

			function example(input: Value) {
				if (typeof input === 'number') {
					return object[input];
				}
			}
		`),
		typeAware('const key = new URL("https://example.com"); object[key]'),
		typeAware('const key = new Date(); object[key]'),
		typeAware('const key = new Map(); object[key]'),
		typeAware('const key: Record<string, unknown> = {}; object[key]'),
		typeAware('declare const key: string[] | string; object[key]'),
		typeAware('declare const key: ReturnType<() => string[] | string>; object[key]'),
		typeAware('declare const key: ReturnType<() => bigint | string>; object[key]'),
		typeAware('declare const key: ReturnType<() => {id: string} | string>; object[key]'),
		typeAware('const unsafe = 9007199254740992; declare const key: typeof unsafe; object[key]'),
		typeAware('declare const key: ReturnType<() => 9007199254740992>; object[key]'),
		typeAware('declare const key: `feature:${string}` | {id: string}; object[key]'),
		typeAware('declare const key: Lowercase<string> | {id: string}; object[key]'),
		typeAware('declare function tag(strings: TemplateStringsArray): {id: string}; object[tag`feature:${string}`]'),
		typeAware('declare function tag(strings: TemplateStringsArray): {id: string}; const key = tag`feature:${string}`; object[key]'),
		typeAware('declare const key: () => void; object[key]'),
		typeAware('declare const key: new () => object; object[key]'),
	],
});

// In a browser all three spellings are the same object
test({
	valid: [
		'const self = {Math: "key"}; object[self.Math]',
		'const window = {Math: "key"}; object[window.Math]',
	],
	invalid: ['globalThis', 'self', 'window'].map(name => ({
		code: `const object = {[${name}.Math]: 1};`,
		errors: 1,
	})),
});
